# aucpace_embedded

./: .gitignore  Cargo.toml  README.md  benchmark_data.csv  exploration.ipynb  memory.x
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/src/: database.rs  main.rs
